--- a/logo/index.html
+++ b/logo/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/logo.css">
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
+    <script src="js/jquery.ui.touch-punch.min.js"></script>
     <script src="js/g.js"></script>
   </head>
   <body data-rsssl=1>
@@ -42,12 +43,13 @@
           value: 11,
           min: 1,
           max: 50,
+          animate: true,
           create: function() {
             handle.text( $( this ).slider( "value" ) );
           },
           slide: function( event, ui ) {
             handle.text( ui.value );
-            const lineWidth = $("#slider").slider("value");
+            const lineWidth = ui.value;
             drawLogo(lineWidth);
           }
         });
