--- a/logo/index.html
+++ b/logo/index.html
@@ -27,7 +27,7 @@
           drawMobius(g, canvas.width, canvas.height, "#F00", lineWidth);
 
           if (lineWidth > 3) {
-            drawMobius(g, canvas.width, canvas.height, "#FFF", 1);
+            //drawMobius(g, canvas.width, canvas.height, "#FFF", 1);
           }
       }
 
